--- a/cs-notebook/DocumentWindow.xaml
+++ b/cs-notebook/DocumentWindow.xaml
@@ -28,11 +28,12 @@
                 <MenuItem x:Name="closeItem" Header="結束" Command="ApplicationCommands.Close"></MenuItem>
             </MenuItem>
             <MenuItem Header="編輯">
-                <MenuItem Header="復原"></MenuItem>
+                <MenuItem Header="復原"  Command="ApplicationCommands.Undo"></MenuItem>
+                <MenuItem Header="取消復原"  Command="ApplicationCommands.Redo"></MenuItem>
                 <Separator />
-                <MenuItem Header="剪下"></MenuItem>
-                <MenuItem Header="複製"></MenuItem>
-                <MenuItem Header="貼上"></MenuItem>
+                <MenuItem Header="剪下" Command="ApplicationCommands.Cut"></MenuItem>
+                <MenuItem Header="複製" Command="ApplicationCommands.Copy"></MenuItem>
+                <MenuItem Header="貼上" Command="ApplicationCommands.Paste"></MenuItem>
                 <Separator />
                 <MenuItem Header="尋找"></MenuItem>
                 <MenuItem Header="找下一個"></MenuItem>
@@ -59,21 +60,46 @@
         </Menu>
         <ToolBarTray Height="40">
             <ToolBar>
-                <Button Width="40" Height="40">
-                    <Image Width="40" Height="40" Source="openfile-icon.png"></Image>
+                <Button Width="40" Height="40" Command="ApplicationCommands.Open" ToolTip="開啟檔案">
+                    <Image Width="40" Height="40" Source="openfile-icon.png" />
                 </Button>
-                <Button Width="40" Height="40">
-                    <Image Width="40" Height="40"></Image>
+                <Button Width="40" Height="40" Command="ApplicationCommands.Save" ToolTip="儲存檔案">
+                    <Image Width="40" Height="40" Source="savefile-icon.png" />
                 </Button>
-                <Button Width="40" Height="40">
-                    <Image Width="40" Height="40"></Image>
+            </ToolBar>
+            <ToolBar>
+                <Button Width="40" Height="40" Command="EditingCommands.ToggleBold" ToolTip="粗體">
+                    <Image Width="40" Height="40" Source="bold-icon.png" />
                 </Button>
-                <Button Width="40" Height="40">
-                    <Image Width="40" Height="40"></Image>
+                <Button Width="40" Height="40" Command="EditingCommands.ToggleItalic" ToolTip="斜體">
+                    <Image Width="40" Height="40" Source="italic-icon.png" />
+                </Button>
+                <ComboBox x:Name="fontComboBox" Width="200" Height="30" SelectedIndex="0" DisplayMemberPath="Source" SelectionChanged="fontComboBox_SelectionChanged" />
+            </ToolBar>
+            <ToolBar>
+                <Button Width="40" Height="40" Command="ApplicationCommands.Undo">
+                    <Image Width="40" Height="40" Source="undo-icon.png" ToolTip="還原"/>
+                </Button>
+                <Button Width="40" Height="40" Command="ApplicationCommands.Redo">
+                    <Image Width="40" Height="40" Source="redo-icon.png" ToolTip="取消還原"/>
+                </Button>
+            </ToolBar>
+            <ToolBar>
+                <Button Width="40" Height="40" Command="EditingCommands.AlignLeft" ToolTip="向左對齊">
+                    <Image Width="40" Height="40" Source="leftalign-icon.png" />
+                </Button>
+                <Button Width="40" Height="40" Command="EditingCommands.AlignCenter" ToolTip="置中對齊">
+                    <Image Width="40" Height="40" Source="centeralign-icon.png" />
+                </Button>
+                <Button Width="40" Height="40" Command="EditingCommands.AlignRight" ToolTip="向右對齊">
+                    <Image Width="40" Height="40" Source="rightalign-icon.png" />
+                </Button>
+                <Button Width="40" Height="40" Command="EditingCommands.AlignJustify" ToolTip="兩端對齊">
+                    <Image Width="40" Height="40" Source="alignjustify-icon.png" />
                 </Button>
             </ToolBar>
         </ToolBarTray>
-        <TextBox x:Name="textBox" Padding="0,5"  VerticalScrollBarVisibility="Visible" FontSize="18" Height="400" Margin="0,0,-0.4,0" Background="#FFEAC3B8" AcceptsReturn="True" />
+        <RichTextBox x:Name="richTextBox" Padding="0,5"  FontSize="16" Height="400" Margin="0,0,0,0" Background="#FFEAC3B8" />
         <StatusBar x:Name="statusBar" Height="30">
         </StatusBar>
     </StackPanel>
